# eq3btsmart

./: .actrc  .gitignore  .releaserc  LICENSE.md  OTHER_LICENSES.md  README.md  codespell.dict  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docs.yml  publish.yml  quality.yml  release.yml
custom_components/eq3btsmart/: __init__.py  binary_sensor.py  const.py  manifest.json
docs/: index.md
docs/about/: credits.md  license.md  sponsor.md
docs/getting_started/: basic_usage.md  exceptions.md  installation.md  pairing.md  registering_callbacks.md
eq3btsmart/: __init__.py  _adapters.py  _structures.py  connection_monitor.py  const.py  exceptions.py  models.py  structures.py  thermostat.py  thermostat_config.py
eq3btsmart/adapter/: eq3_away_time.py  eq3_duration.py  eq3_schedule_time.py  eq3_serial.py  eq3_temperature.py  eq3_temperature_offset.py  eq3_time.py
eq3btsmart/models/: device_data.py  presets.py  schedule_hour.py  status.py
scripts/: generate_reference.py
tests/: conftest.py  const.py  mock_client.py  test_device_data.py  test_eq3_away_time.py  test_eq3_duration.py  test_eq3_schedule_time.py  test_eq3_serial.py  test_eq3_temperature.py  test_eq3_temperature_offset.py  test_eq3_time.py  test_presets.py  test_schedule.py  test_schedule_day.py  test_status.py  test_thermostat.py  test_weekday.py
